Squashing commits Fixed CORS issue Rebasing on main
Worked on Approve and Deny buttons

Add a new pendingApproval component for handling each sighting individually

Made sighting details editable

Removed unnecessary config

Applied styling

Styled components

Added removing of appoved/denied sighting

Error handling.

Refactored code

Removed unnecessary styling

Addressed review comments.

--- a/ui/src/components/pages/Admin/Admin.scss
+++ b/ui/src/components/pages/Admin/Admin.scss
@@ -1,42 +1,11 @@
 @use '@/styles/constants';
 
 .admin {
-    &__info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 16px;
-    }
-
-    &__details {
-        display: flex;
-    }
-
-    &__password {
-        position: relative;
-        padding-right: 8px;
-
-        &::after {
-            position: absolute;
-            content: '';
-
-            right: 0;
-            top: 0;
-            bottom: 0;
-            width: 2px;
-            background-color: black;
-        }
-    }
-
-    &__email {
-        padding-left: 8px;
-    }
-
     &__approvals-title {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        padding: 16px;
+        padding: constants.$padding-default;
     }
 
     &__approve {
@@ -45,5 +14,10 @@
 
     &__reject {
         @include constants.button-deny;
+    }
+
+    &__error{
+        width: 100%;
+        color: constants.$text-error;
     }
 }
