--- a/ui/src/components/pages/ViewSightings/ViewSightings.scss
+++ b/ui/src/components/pages/ViewSightings/ViewSightings.scss
@@ -30,7 +30,6 @@ table {
     justify-content: space-between;
     padding: constants.$padding-small constants.$padding-large;
     border-bottom: 1px solid #ddd;
-    align-items: center;
 }
  
 .table-header {
